--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <title>LEXUS 車主尊榮回饋</title>
 
+    <link rel="shortcut icon" href="/images/favicon.ico">
+
     <script language="javascript" type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
     <script language="javascript" type="text/javascript" src="js/public.js"></script>
 
@@ -22,24 +24,124 @@
   <body>
     <header>a</header>
 
-    <div class="swiper mySwiper d-sm-none d-lg-block">
+    <div class="swiper mySwiper mobile-close">
       <div class="swiper-wrapper">
-        <div class="swiper-slide">Slide 1</div>
-        <div class="swiper-slide">Slide 2</div>
-        <div class="swiper-slide">Slide 3</div>
-        <div class="swiper-slide">Slide 4</div>
-        <div class="swiper-slide">Slide 5</div>
-        <div class="swiper-slide">Slide 6</div>
-        <div class="swiper-slide">Slide 7</div>
-        <div class="swiper-slide">Slide 8</div>
-        <div class="swiper-slide">Slide 9</div>
+        <div class="swiper-slide"><img src="images/banner.png"></div>
+        <div class="swiper-slide"><img src="images/banner02.png"></div>
+        <div class="swiper-slide"><img src="images/banner03.png"></div>
+        <div class="swiper-slide"><img src="images/banner04.png"></div>
       </div>
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
       <div class="swiper-pagination"></div>
     </div>
 
-    <div class="topboxs">ㄇ</div>
+    <div class="topboxs py-4">
+      <div class="mainboxs container-fluid">
+        <div class="row mx-auto align-items-center">
+          <div class="col">
+            <h1 class="mb-0">Lexus尊榮回饋 優惠介紹</h1>
+          </div>
+          <div class="col-auto"><i class="bi bi-search"></i></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="navboxs pt-4">
+      <div class="mainboxs">
+        <ul class="nav nav-pills nav-fill" id="pills-tab" role="tablist">
+          <li class="nav-item" role="presentation">
+            <button class="nav-link ticket-nav active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#ticket-list" type="button" role="tab" aria-controls="ticket-list" aria-selected="true">優惠禮遇</button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link ticket-nav" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#my-ticket" type="button" role="tab" aria-controls="my-ticket" aria-selected="false">我的優惠</button>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <main class="mainboxs">
+      <div class="tab-content" id="pills-tabContent">
+        <!-- 01 list -->
+        <div class="tab-pane fade show active" id="ticket-list" role="tabpanel" aria-labelledby="ticket-list-tab">
+          <div class="my-4 fs-4 test-border">類別項目擺放位置</div>
+
+          <div class="container-fluid px-lg-0 px-3">
+            <div class="row">
+              <div class="col-sm-4 mb-lg-0 mb-4">
+                <div class="card">
+                  <img src="images/pic01.png" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4 mb-lg-0 mb-4">
+                <div class="card">
+                  <img src="images/pic02.png" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4 mb-lg-0 mb-4">
+                <div class="card">
+                  <img src="images/pic01.png" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <div class="col-12 mx-auto">
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- 02 list -->
+        <div class="tab-pane fade" id="my-ticket" role="tabpanel" aria-labelledby="my-ticket-tab">456</div>
+      </div>
+
+      <!-- <div class="tagboxs test-bg">小tag的地方</div>
+
+      <div class="container-fluid">
+        <div class="row mx-auto">
+          
+        </div>
+        <button class="moreBtn btn">更多資訊</button>
+      </div> -->
+
+    </main>
+    
+    <footer class="my-4">
+      <hr class="my-4">
+      <div class="container-fluid">
+        <div class="row align-items-center">
+          <div class="col-lg-6 col-12 text-lg-start text-center">
+            <a href="https://www.instagram.com/lexus_taiwan/?hl=zh-tw" class="social-font me-3" target="_blank">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.facebook.com/lexus.tw?ref=ts&fref=ts" class="social-font me-3" target="_blank">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="https://www.youtube.com/user/LEXUSTaiwanchannel" class="social-font" target="_blank">
+              <i class="fab fa-youtube"></i>
+            </a>
+          </div>
+          <div class="col-lg-6 col-12 text-lg-end text-center my-lg-0 my-4">
+            <a href="https://discoverlexus.com/" class="footerlink" target="_blank">全球LEXUS</a>
+            <a href="https://www.lexus.com.tw/privacy.aspx" class="footerlink" target="_blank">隱私權條款</a>
+          </div>
+          <div class="col-12 text-lg-end text-center f13">© HOTAI MOTOR CO.,LTD. ALL RIGHTS RESERVED.   和泰汽車股份有限公司 03251108</div>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
