完成核銷內容

--- a/modus02.html
+++ b/modus02.html
@@ -585,7 +585,187 @@
     </div>
 
     <!-- 核銷方式05 -->
+    <div class="modal fade" id="modus050" aria-hidden="true" aria-labelledby="modus050Label" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <div class="row">
+              <div class="col pe-0"><i class="blackBar"></i></div>
+              <div class="col-auto">
+                <div class="row">
+                  <div class="col-12 fs-5 mb-1 d-block">Oh my!原燒</div>
+                  <div class="col-12 fs-4 text-primary">核銷方式5-店家碼輸入兌換</div>
+                </div>
+              </div>
+            </div>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p class="f16 ps-3">確定兌換此優惠？</p>
+            <div class="position-relative">
+              <img src="images/modus-pic.png" class="img-fluid">
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button class="w-100 btn btn-black" data-bs-target="#modus052" data-bs-toggle="modal" data-bs-dismiss="modal">確定兌換</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="modus052" aria-hidden="true" aria-labelledby="modus052Label2" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <div class="row">
+              <div class="col pe-0"><i class="blackBar"></i></div>
+              <div class="col-auto">
+                <div class="row">
+                  <div class="col-12 fs-5 mb-1 d-block">Oh my!原燒</div>
+                  <div class="col-12 fs-4 text-primary">核銷方式5-店家碼輸入兌換</div>
+                </div>
+              </div>
+            </div>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p class="fs-5 text-dark ps-3 mt-4">請輸入店家 5 位數專屬碼</p>
+            <div class="row g-3 mx-auto mb-5">
+              <div class="col">
+                <input type="number" class="form-control numH" inputmode="numeric" oninput="if(value.length>1)value=value.slice(0,1)">
+              </div>
+              <div class="col">
+                <input type="number" class="form-control numH" inputmode="numeric" oninput="if(value.length>1)value=value.slice(0,1)">
+              </div>
+              <div class="col">
+                <input type="number" class="form-control numH" inputmode="numeric" oninput="if(value.length>1)value=value.slice(0,1)">
+              </div>
+              <div class="col">
+                <input type="number" class="form-control numH" inputmode="numeric" oninput="if(value.length>1)value=value.slice(0,1)">
+              </div>
+              <div class="col">
+                <input type="number" class="form-control numH" inputmode="numeric" oninput="if(value.length>1)value=value.slice(0,1)">
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button class="w-100 btn btn-black" data-bs-target="#modus043" data-bs-toggle="modal" data-bs-dismiss="modal">確定兌換</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="modus053" aria-hidden="true" aria-labelledby="modus053Label2" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <div class="row">
+              <div class="col pe-0"><i class="blackBar"></i></div>
+              <div class="col-auto">
+                <div class="row">
+                  <div class="col-12 fs-5 mb-1 d-block">Oh my!原燒</div>
+                  <div class="col-12 fs-4 text-primary">核銷方式5-店家碼輸入兌換</div>
+                </div>
+              </div>
+            </div>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p class="f16 ps-3">您於 2023年12月26日 16:23:49 成功兌換。<br>畫面將自動轉跳至我的優惠頁面</p>
+            <div class="position-relative">
+              <img src="images/modus-cover.png" class="img-fluid position-absolute top-0 start-0">
+              <img src="images/modus-pic.png" class="img-fluid">
+            </div>
+          </div>
+          <!-- <div class="modal-footer">
+            <button class="btn btn-primary" data-bs-target="#modus010" data-bs-toggle="modal" data-bs-dismiss="modal">Back to first</button>
+          </div> -->
+        </div>
+      </div>
+    </div>
+
     <!-- 核銷方式06 -->
+    <div class="modal fade" id="modus060" aria-hidden="true" aria-labelledby="modus060Label" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <div class="row">
+              <div class="col pe-0"><i class="blackBar"></i></div>
+              <div class="col-auto">
+                <div class="row">
+                  <div class="col-12 fs-5 mb-1 d-block">Oh my!原燒</div>
+                  <div class="col-12 fs-4 text-primary">核銷方式6-變動條碼兌換</div>
+                </div>
+              </div>
+            </div>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p class="f16 ps-3">確定兌換此優惠？</p>
+            <div class="position-relative">
+              <img src="images/modus-pic.png" class="img-fluid">
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button class="w-100 btn btn-black" data-bs-target="#modus062" data-bs-toggle="modal" data-bs-dismiss="modal">確定兌換</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="modus062" aria-hidden="true" aria-labelledby="modus062Label2" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <div class="row">
+              <div class="col pe-0"><i class="blackBar"></i></div>
+              <div class="col-auto">
+                <div class="row">
+                  <div class="col-12 fs-5 mb-1 d-block">Oh my!原燒</div>
+                  <div class="col-12 fs-4 text-primary">核銷方式6-變動條碼兌換</div>
+                </div>
+              </div>
+            </div>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="text-center"><img src="images/qrcode.svg" class="img-fluid"></div>
+            <p class="fs-4 text-dark text-center mt-5">請於&nbsp;&nbsp;<b class="text-danger align-baseline">03:56</b>&nbsp;&nbsp;完成兌換</p>
+            <p class="fs-5 text-dark ps-3 mt-4">
+              01. 請出示此畫面供工作人員掃描，完成兌換。<br>
+              02. 或點擊下方【確定兌換】，再出示完成兌換畫面給工作人員。</p>
+          </div>
+          <div class="modal-footer">
+            <button class="w-100 btn btn-black" data-bs-target="#modus063" data-bs-toggle="modal" data-bs-dismiss="modal">確定兌換</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="modus063" aria-hidden="true" aria-labelledby="modus063Label2" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <div class="row">
+              <div class="col pe-0"><i class="blackBar"></i></div>
+              <div class="col-auto">
+                <div class="row">
+                  <div class="col-12 fs-5 mb-1 d-block">Oh my!原燒</div>
+                  <div class="col-12 fs-4 text-primary">核銷方式6-變動條碼兌換</div>
+                </div>
+              </div>
+            </div>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p class="f16 ps-3">您於 2023年12月26日 16:23:49 成功兌換。<br>畫面將自動轉跳至我的優惠頁面</p>
+            <div class="position-relative">
+              <img src="images/modus-cover.png" class="img-fluid position-absolute top-0 start-0">
+              <img src="images/modus-pic.png" class="img-fluid">
+            </div>
+          </div>
+          <!-- <div class="modal-footer">
+            <button class="btn btn-primary" data-bs-target="#modus010" data-bs-toggle="modal" data-bs-dismiss="modal">Back to first</button>
+          </div> -->
+        </div>
+      </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
