--- a/index.html
+++ b/index.html
@@ -52,6 +52,23 @@
       <div class="swiper-pagination"></div>
     </div>
 
+    <div class="swiper swiper-tag test-border">
+      <div class="swiper-wrapper swiper-wrapper-tag">
+        <div class="swiper-slide swiper-slide-tag">Resize me!1</div>
+        <div class="swiper-slide swiper-slide-tag">Resize me!2</div>
+        <div class="swiper-slide swiper-slide-tag">Resize me!3</div>
+        <div class="swiper-slide swiper-slide-tag">Resize me!4</div>
+        <div class="swiper-slide swiper-slide-tag">Resize me!5</div>
+        <div class="swiper-slide swiper-slide-tag">Resize me!6</div>
+        <div class="swiper-slide swiper-slide-tag">Resize me!7</div>
+        <div class="swiper-slide swiper-slide-tag">Resize me!8</div>
+        <div class="swiper-slide swiper-slide-tag">Resize me!9</div>
+        <div class="swiper-slide swiper-slide-tag">Resize me!10</div>
+      </div>
+      <div class="swiper-button-prev swiper-button-prev-tag"></div>
+      <div class="swiper-button-next swiper-button-next-tag"></div>
+    </div>
+
     <!-- mobile topBoxs -->
     <div class="mobile-open w-100">
       <div class="mobile-header">
@@ -4678,6 +4695,8 @@
       </div>
     </footer>
 
+    
+
     <!-- 登入光箱 -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
@@ -4724,6 +4743,34 @@
         </div>
       </div>
     </div>
+
+    <script>
+      var swiper = new Swiper('.swiper-tag', {
+        slidesPerView: 1,
+        direction: getDirection(),
+        navigation: {
+          nextEl: '.swiper-button-next-tag',
+          prevEl: '.swiper-button-prev-tag',
+        },
+        breakpoints: {
+          1024: {
+            slidesPerView: 7,
+          }, 
+        },
+        on: {
+          resize: function () {
+            swiper.changeDirection(getDirection());
+          },
+        },
+      });
+
+      function getDirection() {
+        var windowWidth = window.innerWidth;
+        var direction = window.innerWidth <= 760 ? 'vertical' : 'horizontal';
+
+        return direction;
+      }
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
