--- a/index.html
+++ b/index.html
@@ -4743,39 +4743,11 @@
         </div>
       </div>
     </div>
-
-    <script>
-      var swiper = new Swiper('.swiper-tag', {
-        slidesPerView: 1,
-        direction: getDirection(),
-        navigation: {
-          nextEl: '.swiper-button-next-tag',
-          prevEl: '.swiper-button-prev-tag',
-        },
-        breakpoints: {
-          1024: {
-            slidesPerView: 7,
-          }, 
-        },
-        on: {
-          resize: function () {
-            swiper.changeDirection(getDirection());
-          },
-        },
-      });
-
-      function getDirection() {
-        var windowWidth = window.innerWidth;
-        var direction = window.innerWidth <= 760 ? 'vertical' : 'horizontal';
-
-        return direction;
-      }
-    </script>
-
+    <!-- 0507 swiper 移至 public.js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> 
   </body>
 </html>
 
