--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="/images/favicon.ico">
 
     <script language="javascript" type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
+    <script language="javascript" type="text/javascript" src="js/banner.js"></script>
     <script language="javascript" type="text/javascript" src="js/public.js"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -52,23 +53,6 @@
       <div class="swiper-pagination"></div>
     </div>
 
-    <div class="swiper swiper-tag test-border">
-      <div class="swiper-wrapper swiper-wrapper-tag">
-        <div class="swiper-slide swiper-slide-tag">Resize me!1</div>
-        <div class="swiper-slide swiper-slide-tag">Resize me!2</div>
-        <div class="swiper-slide swiper-slide-tag">Resize me!3</div>
-        <div class="swiper-slide swiper-slide-tag">Resize me!4</div>
-        <div class="swiper-slide swiper-slide-tag">Resize me!5</div>
-        <div class="swiper-slide swiper-slide-tag">Resize me!6</div>
-        <div class="swiper-slide swiper-slide-tag">Resize me!7</div>
-        <div class="swiper-slide swiper-slide-tag">Resize me!8</div>
-        <div class="swiper-slide swiper-slide-tag">Resize me!9</div>
-        <div class="swiper-slide swiper-slide-tag">Resize me!10</div>
-      </div>
-      <div class="swiper-button-prev swiper-button-prev-tag"></div>
-      <div class="swiper-button-next swiper-button-next-tag"></div>
-    </div>
-
     <!-- mobile topBoxs -->
     <div class="mobile-open w-100">
       <div class="mobile-header">
@@ -108,50 +92,69 @@
       </div>
     </div>
 
+    <!-- <div class="swiper swiper-tag test-border">
+      <div class="swiper-wrapper swiper-wrapper-tag">
+        <div class="swiper-slide swiper-slide-tag">Resize me!1</div>
+        <div class="swiper-slide swiper-slide-tag">Resize me!2</div>
+        <div class="swiper-slide swiper-slide-tag">Resize me!3</div>
+        <div class="swiper-slide swiper-slide-tag">Resize me!4</div>
+        <div class="swiper-slide swiper-slide-tag">Resize me!5</div>
+        <div class="swiper-slide swiper-slide-tag">Resize me!6</div>
+        <div class="swiper-slide swiper-slide-tag">Resize me!7</div>
+        <div class="swiper-slide swiper-slide-tag">Resize me!8</div>
+        <div class="swiper-slide swiper-slide-tag">Resize me!9</div>
+        <div class="swiper-slide swiper-slide-tag">Resize me!10</div>
+      </div>
+      <div class="swiper-button-prev swiper-button-prev-tag"></div>
+      <div class="swiper-button-next swiper-button-next-tag"></div>
+    </div> -->
+
     <main class="mainboxs">
       <div class="tab-content" id="pills-tabContent">
         <!-- 01 list -->
         <div class="tab-pane fade show active" id="ticket-list" role="tabpanel" aria-labelledby="ticket-list-tab">
-          <div class="my-4 fs-4">
+          <div class="my-4 fs-4 swiper swiper-tag test-border">
             <!-- 01 list類別 -->
-            <ul class="nav nav-pills nav-fill" id="pills-tab" role="tablist">
+            <div class="swiper-wrapper swiper-wrapper-tag nav nav-pills nav-fill" id="pills-tab" role="tablist">
               <!-- 010 -->
-              <li class="nav-item" role="presentation">
-                <div class="nav-link tag-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#tag01" role="tab" aria-controls="tag01" aria-selected="true"><i class="fa-solid fa-store d-block fs-4"></i>全部</div>
-              </li>
+              <button class="swiper-slide swiper-slide-tag nav-link tag-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#tag01" role="tab" aria-controls="tag01" aria-selected="true">
+                <i class="fa-solid fa-store d-block fs-4"></i>全部
+              </button>
               <!-- 011 -->
-              <li class="nav-item" role="presentation">
-                <div class="nav-link tag-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#tag02" role="tab" aria-controls="tag02" aria-selected="false"><i class="fa-solid fa-martini-glass-empty d-block fs-4"></i>渡假休閒</div>
-              </li>
+              <button class="swiper-slide swiper-slide-tag nav-link tag-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#tag02" role="tab" aria-controls="tag02" aria-selected="false">
+                <i class="fa-solid fa-martini-glass-empty d-block fs-4"></i>渡假休閒
+              </button>
               <!-- 012 -->
-              <li class="nav-item" role="presentation">
-                <div class="nav-link tag-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#tag03" role="tab" aria-controls="tag03" aria-selected="false"><i class="fa-solid fa-tree-city d-block fs-4"></i>類別項目01</div>
-              </li>
+              <button class="swiper-slide swiper-slide-tag nav-link tag-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#tag03" role="tab" aria-controls="tag03" aria-selected="false">
+                <i class="fa-solid fa-tree-city d-block fs-4"></i>類別項目01
+              </button>
               <!-- 013 -->
-              <li class="nav-item" role="presentation">
-                <div class="nav-link tag-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#tag04" role="tab" aria-controls="tag04" aria-selected="false"><i class="fa-solid fa-umbrella-beach d-block fs-4"></i>類別項目02</div>
-              </li>
+              <button class="swiper-slide swiper-slide-tag nav-link tag-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#tag04" role="tab" aria-controls="tag04" aria-selected="false">
+                <i class="fa-solid fa-umbrella-beach d-block fs-4"></i>類別項目02
+              </button>
               <!-- 014 -->
-              <li class="nav-item" role="presentation">
-                <div class="nav-link tag-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#tag05" role="tab" aria-controls="tag05" aria-selected="false"><i class="fa-solid fa-shapes d-block fs-4"></i>類別項目03</div>
-              </li>
+              <button class="swiper-slide swiper-slide-tag nav-link tag-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#tag05" role="tab" aria-controls="tag05" aria-selected="false">
+                <i class="fa-solid fa-shapes d-block fs-4"></i>類別項目03
+              </button>
               <!-- 015 -->
-              <li class="nav-item" role="presentation">
-                <div class="nav-link tag-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#tag06" role="tab" aria-controls="tag06" aria-selected="false"><i class="fa-solid fa-person-biking d-block fs-4"></i>類別項目04</div>
-              </li>
+              <button class="swiper-slide swiper-slide-tag nav-link tag-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#tag06" role="tab" aria-controls="tag06" aria-selected="false">
+                <i class="fa-solid fa-person-biking d-block fs-4"></i>類別項目04
+              </button>
               <!-- 016 -->
-              <li class="nav-item" role="presentation">
-                <div class="nav-link tag-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#tag07" role="tab" aria-controls="tag07" aria-selected="false"><i class="fa-solid fa-kitchen-set d-block fs-4"></i>類別項目05</div>
-              </li>
+              <button class="swiper-slide swiper-slide-tag nav-link tag-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#tag07" role="tab" aria-controls="tag07" aria-selected="false">
+                <i class="fa-solid fa-kitchen-set d-block fs-4"></i>類別項目05
+              </button>
               <!-- 017 -->
-              <li class="nav-item" role="presentation">
-                <div class="nav-link tag-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#tag08" role="tab" aria-controls="tag08" aria-selected="false"><i class="fa-solid fa-gifts d-block fs-4"></i>類別項目06</div>
-              </li>
+              <button class="swiper-slide swiper-slide-tag nav-link tag-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#tag08" role="tab" aria-controls="tag08" aria-selected="false">
+                <i class="fa-solid fa-gifts d-block fs-4"></i>類別項目06
+              </button>
               <!-- 018 -->
-              <li class="nav-item" role="presentation">
-                <div class="nav-link tag-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#tag09" role="tab" aria-controls="tag09" aria-selected="false"><i class="fa-regular fa-gem d-block fs-4"></i>類別項目07</div>
-              </li>
-            </ul>
+              <button class="swiper-slide swiper-slide-tag nav-link tag-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#tag09" role="tab" aria-controls="tag09" aria-selected="false">
+                <i class="fa-regular fa-gem d-block fs-4"></i>類別項目07
+              </button>
+            </div>
+            <div class="swiper-button-prev swiper-button-prev-tag"></div>
+            <div class="swiper-button-next swiper-button-next-tag"></div>
           </div>
 
           <div class="tab-content" id="pills-tabContent">
