--- a/modus05.html
+++ b/modus05.html
@@ -11,6 +11,7 @@
 
     <script language="javascript" type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
     <script language="javascript" type="text/javascript" src="js/imgLiquid-min.js"></script>
+    <script language="javascript" type="text/javascript" src="js/banner.js"></script>
     <script language="javascript" type="text/javascript" src="js/public.js"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
