--- a/writeoff03.html
+++ b/writeoff03.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="/images/favicon.ico">
 
     <script language="javascript" type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
+    <script language="javascript" type="text/javascript" src="js/banner.js"></script>
     <script language="javascript" type="text/javascript" src="js/public.js"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
