首頁小頁籤調整

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="tab-pane fade show active" id="ticket-list" role="tabpanel" aria-labelledby="ticket-list-tab">
           <div class="my-4 fs-4 swiper swiper-tag test-border">
             <!-- 01 list類別 -->
-            <div class="swiper-wrapper swiper-wrapper-tag nav nav-pills nav-fill" id="pills-tab" role="tablist">
+            <div class="swiper-wrapper swiper-wrapper-tag nav nav-pills" id="pills-tab" role="tablist" style="flex-wrap: nowrap;">
               <!-- 010 -->
               <button class="swiper-slide swiper-slide-tag nav-link tag-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#tag01" role="tab" aria-controls="tag01" aria-selected="true">
                 <i class="fa-solid fa-store d-block fs-4"></i>全部
