--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="/images/favicon.ico">
 
     <script language="javascript" type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
+    <script language="javascript" type="text/javascript" src="js/imgLiquid-min.js"></script>
     <script language="javascript" type="text/javascript" src="js/banner.js"></script>
     <script language="javascript" type="text/javascript" src="js/public.js"></script>
 
@@ -67,7 +68,7 @@
 
     <!-- web topBoxs -->
     <div class="topboxs py-4 mobile-close">
-      <div class="mainboxs container-fluid px-0">
+      <div class="mainboxs w990 container-fluid px-0">
         <div class="row mx-auto align-items-center">
           <div class="col px-0">
             <h1 class="mb-0">LEXUS尊榮回饋 優惠介紹</h1>
@@ -80,7 +81,7 @@
     </div>
 
     <div class="navboxs pt-4">
-      <div class="mainboxs">
+      <div class="mainboxs w990">
         <ul class="nav nav-pills nav-fill" id="pills-tab" role="tablist">
           <li class="nav-item" role="presentation">
             <button class="nav-link ticket-nav active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#ticket-list" type="button" role="tab" aria-controls="ticket-list" aria-selected="true">優惠禮遇</button>
@@ -93,7 +94,7 @@
     </div>
 
     <div class="mainboxs">
-      <div class="tab-content" id="pills-tabContent">
+      <div class="tab-content w990" id="pills-tabContent">
         <!-- 01 list 優惠禮遇 -->
         <div class="tab-pane fade show active" id="ticket-list" role="tabpanel" aria-labelledby="ticket-list-tab">
           <div class="my-4 fs-4 swiper swiper-tag">
