--- a/qa.html
+++ b/qa.html
@@ -67,7 +67,7 @@
 
     <!-- web topBoxs -->
     <div class="topboxs py-4 mobile-close">
-      <div class="mainboxs container-fluid px-0">
+      <div class="mainboxs w990 container-fluid px-0">
         <div class="row mx-auto align-items-center">
           <div class="col px-0">
             <h1 class="mb-0">LEXUS尊榮回饋 優惠介紹</h1>
@@ -86,7 +86,7 @@
       </div>
     </div>
 
-    <main class="mainboxs my-5">
+    <main class="mainboxs w990 my-5">
       <div class="container-fluid">
         <div class="accordion" id="accordionExample">
           <div class="accordion-item">
