--- a/modus04.html
+++ b/modus04.html
@@ -75,7 +75,7 @@
 
     <!-- web topBoxs -->
     <div class="topboxs py-4 mobile-close">
-      <div class="mainboxs container-fluid px-0">
+      <div class="mainboxs w990 container-fluid px-0">
         <div class="row mx-auto align-items-center">
           <div class="col-12 px-0">
             <a href="index-login.html" class="text-dark fs-6">
@@ -94,7 +94,7 @@
 
     <!-- 優惠標題 -->
     <div class="navboxs pt-lg-4 pt-3">
-      <div class="mainboxs mb-3">
+      <div class="mainboxs w990 mb-3">
         <div class="row mx-auto">
           <div class="col-11 px-lg-0 px-3">
             <div class="modusTitile">
@@ -112,7 +112,7 @@
     </div>
 
     <!-- 優惠內容 -->
-    <main class="mainboxs mt-lg-5 mt-3">
+    <main class="mainboxs w990 mt-lg-5 mt-3">
       <div class="container-fluid px-lg-0 px-3">
         <div class="row">
           <div class="col-12 mb-4"><img src="images/pic05.png" class="img-fluid"></div>
