--- a/search.html
+++ b/search.html
@@ -74,7 +74,7 @@
 
     <!-- web topBoxs -->
     <div class="topboxs py-4 mobile-close">
-      <div class="mainboxs container-fluid px-0">
+      <div class="mainboxs w990 container-fluid px-0">
         <div class="row mx-auto align-items-center">
           <div class="col-12 px-0">
             <a href="index-login.html" class="text-dark fs-6">
@@ -91,7 +91,7 @@
       </div>
     </div>
 
-    <main class="mainboxs mt-lg-5 mt-3">
+    <main class="mainboxs w990 mt-lg-5 mt-3">
       <div class="container-fluid px-lg-0 px-3">
         <div class="row">
           <div class="col-12 searchText mb-3">您的搜尋結果</div>
